// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test VariableTextSettings form fields 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="react-draggable"
              style="min-width: min(520px, 95vw); transform: translate(512px, -344px)translate(-28px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      Variable Texts Settings
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div>
                    This setting will be automatically applied to all variable texts
                  </div>
                  <form
                    class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash form"
                  >
                    <div
                      class="ant-row css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-col ant-col-11 css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-hidden"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-hidden"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="current"
                                title="Current"
                              >
                                Current
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="1000000000"
                                        aria-valuemin="0"
                                        aria-valuenow="1"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="current"
                                        role="spinbutton"
                                        step="1"
                                        value="1"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="start"
                                title="Start"
                              >
                                Start
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="true"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="999999999"
                                        aria-valuemin="0"
                                        aria-valuenow="0"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="start"
                                        role="spinbutton"
                                        step="1"
                                        value="0"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="end"
                                title="End"
                              >
                                End
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="1000000000"
                                        aria-valuemin="1"
                                        aria-valuenow="999"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="end"
                                        role="spinbutton"
                                        step="1"
                                        value="999"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="advanceBy"
                                title="Advance By"
                              >
                                Advance By
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="true"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="1000000000"
                                        aria-valuemin="1"
                                        aria-valuenow="1"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="advanceBy"
                                        role="spinbutton"
                                        step="1"
                                        value="1"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-2 divider-block css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-divider css-dev-only-do-not-override-hash ant-divider-vertical divider"
                          role="separator"
                        />
                      </div>
                      <div
                        class="ant-col ant-col-11 css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="row"
                        >
                          <div
                            class="ant-form-item css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="left"
                                          class="anticon anticon-left"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="left"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span>
                                        Previous
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-form-item css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="right"
                                          class="anticon anticon-right"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="right"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span>
                                        Next
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <span
                                        aria-label="desktop"
                                        class="anticon anticon-desktop"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="desktop"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span>
                                      Test
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <span
                                        aria-label="font-colors"
                                        class="anticon anticon-font-colors"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="font-colors"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M904 816H120c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8zm-650.3-80h85c4.2 0 8-2.7 9.3-6.8l53.7-166h219.2l53.2 166c1.3 4 5 6.8 9.3 6.8h89.1c1.1 0 2.2-.2 3.2-.5a9.7 9.7 0 006-12.4L573.6 118.6a9.9 9.9 0 00-9.2-6.6H462.1c-4.2 0-7.9 2.6-9.2 6.6L244.5 723.1c-.4 1-.5 2.1-.5 3.2-.1 5.3 4.3 9.7 9.7 9.7zm255.9-516.1h4.1l83.8 263.8H424.9l84.7-263.8z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span>
                                      Finalize
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item toggle css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="autoAdvance"
                                title="Auto-Advance"
                              >
                                Auto-Advance
                                <span
                                  aria-label="question-circle"
                                  class="anticon anticon-question-circle ant-form-item-tooltip"
                                  role="img"
                                  title=""
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="question-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                                    />
                                  </svg>
                                </span>
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    aria-checked="true"
                                    class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
                                    id="autoAdvance"
                                    role="switch"
                                    type="button"
                                  >
                                    <div
                                      class="ant-switch-handle"
                                    />
                                    <span
                                      class="ant-switch-inner"
                                    >
                                      <span
                                        class="ant-switch-inner-checked"
                                      />
                                      <span
                                        class="ant-switch-inner-unchecked"
                                      />
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
                <div
                  class="ant-modal-footer"
                >
                  <div
                    class="footer"
                  >
                    <div
                      class="csv-block"
                    >
                      <b
                        class="label"
                      >
                        CSV File
                        : 
                      </b>
                      <span
                        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-dev-only-do-not-override-hash"
                      >
                        file_name.csv
                      </span>
                      <button
                        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <span
                            aria-label="upload"
                            class="anticon anticon-upload"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="upload"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span>
                          Browse
                        </span>
                      </button>
                      <button
                        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
                        type="button"
                      >
                        <span>
                          Clear
                        </span>
                      </button>
                    </div>
                    <div>
                      <button
                        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                        type="button"
                      >
                        <span>
                          OK
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test VariableTextSettings form fields 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="react-draggable"
              style="min-width: min(520px, 95vw); transform: translate(512px, -344px)translate(-28px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      Variable Texts Settings
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div>
                    This setting will be automatically applied to all variable texts
                  </div>
                  <form
                    class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash form"
                  >
                    <div
                      class="ant-row css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-col ant-col-11 css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success ant-form-item-hidden"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success ant-form-item-hidden"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="current"
                                title="Current"
                              >
                                Current
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined ant-input-number-status-error"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="1000000000"
                                        aria-valuemin="0"
                                        aria-valuenow="1"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="current"
                                        role="spinbutton"
                                        step="1"
                                        value="1"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="start"
                                title="Start"
                              >
                                Start
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined ant-input-number-status-success"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="999999999"
                                        aria-valuemin="0"
                                        aria-valuenow="2"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="start"
                                        role="spinbutton"
                                        step="1"
                                        value="2"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="end"
                                title="End"
                              >
                                End
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined ant-input-number-status-success"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="1000000000"
                                        aria-valuemin="3"
                                        aria-valuenow="10"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="end"
                                        role="spinbutton"
                                        step="1"
                                        value="10"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="advanceBy"
                                title="Advance By"
                              >
                                Advance By
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-in-form-item css-dev-only-do-not-override-hash ant-input-number-outlined ant-input-number-status-success"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuemax="1000000000"
                                        aria-valuemin="1"
                                        aria-valuenow="20"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="advanceBy"
                                        role="spinbutton"
                                        step="1"
                                        value="20"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-2 divider-block css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-divider css-dev-only-do-not-override-hash ant-divider-vertical divider"
                          role="separator"
                        />
                      </div>
                      <div
                        class="ant-col ant-col-11 css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="row"
                        >
                          <div
                            class="ant-form-item css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                      disabled=""
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="left"
                                          class="anticon anticon-left"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="left"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span>
                                        Previous
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-form-item css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-form-item-control-input"
                                >
                                  <div
                                    class="ant-form-item-control-input-content"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                      type="button"
                                    >
                                      <span
                                        class="ant-btn-icon"
                                      >
                                        <span
                                          aria-label="right"
                                          class="anticon anticon-right"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="right"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span>
                                        Next
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <span
                                        aria-label="desktop"
                                        class="anticon anticon-desktop"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="desktop"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span>
                                      Test
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <span
                                        aria-label="font-colors"
                                        class="anticon anticon-font-colors"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="font-colors"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M904 816H120c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8zm-650.3-80h85c4.2 0 8-2.7 9.3-6.8l53.7-166h219.2l53.2 166c1.3 4 5 6.8 9.3 6.8h89.1c1.1 0 2.2-.2 3.2-.5a9.7 9.7 0 006-12.4L573.6 118.6a9.9 9.9 0 00-9.2-6.6H462.1c-4.2 0-7.9 2.6-9.2 6.6L244.5 723.1c-.4 1-.5 2.1-.5 3.2-.1 5.3 4.3 9.7 9.7 9.7zm255.9-516.1h4.1l83.8 263.8H424.9l84.7-263.8z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span>
                                      Finalize
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-form-item toggle css-dev-only-do-not-override-hash ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                          >
                            <div
                              class="ant-col ant-col-12 ant-form-item-label css-dev-only-do-not-override-hash"
                            >
                              <label
                                class=""
                                for="autoAdvance"
                                title="Auto-Advance"
                              >
                                Auto-Advance
                                <span
                                  aria-label="question-circle"
                                  class="anticon anticon-question-circle ant-form-item-tooltip"
                                  role="img"
                                  title=""
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="question-circle"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                    />
                                    <path
                                      d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                                    />
                                  </svg>
                                </span>
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    aria-checked="false"
                                    class="ant-switch css-dev-only-do-not-override-hash"
                                    id="autoAdvance"
                                    role="switch"
                                    type="button"
                                  >
                                    <div
                                      class="ant-switch-handle"
                                    />
                                    <span
                                      class="ant-switch-inner"
                                    >
                                      <span
                                        class="ant-switch-inner-checked"
                                      />
                                      <span
                                        class="ant-switch-inner-unchecked"
                                      />
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
                <div
                  class="ant-modal-footer"
                >
                  <div
                    class="footer"
                  >
                    <div
                      class="csv-block"
                    >
                      <b
                        class="label"
                      >
                        CSV File
                        : 
                      </b>
                      <button
                        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <span
                            aria-label="upload"
                            class="anticon anticon-upload"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="upload"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span>
                          Browse
                        </span>
                      </button>
                      <button
                        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
                        type="button"
                      >
                        <span>
                          Clear
                        </span>
                      </button>
                    </div>
                    <div>
                      <button
                        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                        type="button"
                      >
                        <span>
                          OK
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
